@@ -1,3 +1,7 @@
+2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.TextEditor.Tests/SearchTests.cs: Track api changes.
+
 2009-01-20  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added unit test
